# pytest-easyMPI

./: .gitignore  .prospector.yml  .travis.yml  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
pytest_MPI/: __init__.py  _decorator.py  _message_parser.py  _mpi_test_parser.py  _plugin.py  _print_capture.py  _test_name_converter.py
pytest_easyMPI/: __init__.py  _decorator.py  _mpi_test_parser.py  _print_capture.py
tests/: test_decorator.py
