[metadata]
name = pytest-MPI
author = NOhs
summary = Package that supports mpi tests in pytest
license = MIT
home-page = https://github.com/NOhs/pytest-MPI
description-file = README.rst
keywords = mpi, pytest
classifiers =
    Programming Language :: Python
    Framework :: Pytest

[files]
packages = pytest_MPI
